--- a/DataStructures/DataStructureTests/DataStructureTests.csproj
+++ b/DataStructures/DataStructureTests/DataStructureTests.csproj
@@ -54,6 +54,8 @@
     <Compile Include="LinkedListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ArraysTests.cs" />
+    <Compile Include="TreeTests.cs" />
+    <Compile Include="GraphTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
